sumo/tests/sumo/extended/vaporizer/errors/end_negative/errors.sumo
Error: A vaporization end is negative (edge id='middle').
Quitting (on error).
